[Win][Clang][ImageDiff] Fix compilation error and warning of PlatformImageCairo.cpp https://bugs.webkit.org/show_bug.cgi?id=189496

Reviewed by Alex Christensen.

* ImageDiff/cairo/PlatformImageCairo.cpp:
(ImageDiff::PlatformImage::createFromStdin): Removed unnecessary ReadContext struct.
(ImageDiff::PlatformImage::writeAsPNGToStdout): Use '%lu' format type specifier for unsigned long.

Canonical link: https://commits.webkit.org/204510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235929 268f45cc-cd09-0410-ab3c-d52691b4dbfc